fixed a bug in which the expanded items had a large gap below

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -26,7 +26,7 @@ p.content {
   background-position: top center;
 }
 
-.row {
+.big-row {
   height: 100%;
 }
 
