--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -41,11 +41,9 @@
 }
 
 .copyright {
-  position: relative;
   bottom: 0;
   color: #f0696a !important;
 }
-
 .show-mobile {
   display: none;
 }
